<resources>
    <string name="app_name">RGB Game Console</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_games">Games</string>
    <string name="connect">Connect</string>
    <string name="no_connections">Connect to display first!</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="device_address">device_address</string>
    <string name="connected">Connected.</string>
    <string name="maze">Maze</string>
    <string name="coloring">Coloring</string>
    <string name="snake">Snake</string>
    <string name="doodle_jump">Little Bouncer</string>
    <string name="about">About</string>
    <string name="connection_fail">Connection Failed. Is it a SPP Bluetooth? Try again.</string>
    <string name="Vitalli">Android/Arduino Developer\nVitalii Nikolaienko</string>
    <string name="Iryna">Main Arduino Developer\nIryna Mamai</string>
    <string name="Valerii">Practical part\nValerii Medvezhonkov</string>
    <string name="icons">Icons made by Freepic, Smashicons\nfrom www.flaticon.com</string>
    <string name="type_of_maiz">Maze\'s mode</string>
    <string name="with_light">Normal mode</string>
    <string name="wo_light">Hard mode</string>
    <string name="required_arduino">Connect to Arduino first</string>
    <string name="start_game">Start game</string>
    <string name="maze_type">Maze</string>
    <string name="level">Speed</string>
    <string name="level0">No maze</string>
    <string name="level1">Maze 1</string>
    <string name="level2">Maze 2</string>
    <string name="level3">Maze 3</string>
    <string name="level4">Maze 4</string>
    <string name="level5">Maze 5</string>
    <string name="speed1">Speed 1</string>
    <string name="speed2">Speed 2</string>
    <string name="speed3">Speed 3</string>
    <string name="speed4">Speed 4</string>
    <string name="speed5">Speed 5</string>
    <string name="speed6">Speed 6</string>
    <string name="speed7">Speed 7</string>
    <string name="speed8">Speed 8</string>
    <string name="effects">Effects</string>
    <string name="effect1">Matrix</string>
    <string name="effect2">Confetti</string>
    <string name="effect3">Snow</string>
    <string name="effect4">Rainbow</string>
    <string name="effect5">Balls</string>
    <string name="clearBucket">Clear bucket</string>
    <string name="brush">Brush</string>
    <string name="eraser">Eraser</string>
    <string name="paintBucket">Paint Bucket</string>
    <string name="speedNow">speed_now</string>
    <string name="mazeNow">maze_now</string>
</resources>
